# OpenSkydimo

./: .clang-format  .gitignore  CMakeLists.txt  OpenSkydimo.sln
.github/workflows/: cmake-single-platform.yml
Client/: Program.cs
Daemon/: Program.cs
Daemon/Commands/: Listener.cs
Daemon/Driver/: ColorRGB.cs  Logger.cs  SkydimoDriver.cs
Daemon/Shared/: ColorRGB.cs  Logger.cs
cli/: CMakeLists.txt
cli/src/: main.cpp
common/: CMakeLists.txt
common/include/openskydimo/: commands.hpp  config.h  logger.h  types.h
common/src/: logger.cpp
daemon/: CMakeLists.txt
daemon/include/: CommandsListener.h  SkydimoDriver.h  json_SkydimoDriver.hpp
daemon/src/: CommandsListener.cpp  SkydimoDriver.cpp  main.cpp
